--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,17 @@
             <artifactId>jai_core</artifactId>
             <version>1.1.3</version>
         </dependency>
-<!-- https://mvnrepository.com/artifact/javax.media/jai_codec -->
-<dependency>
-    <groupId>javax.media</groupId>
-    <artifactId>jai_codec</artifactId>
-    <version>1.1.3</version>
-</dependency>
-
+        <!-- https://mvnrepository.com/artifact/javax.media/jai_codec -->
+        <dependency>
+            <groupId>javax.media</groupId>
+            <artifactId>jai_codec</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jaitools</groupId>
+            <artifactId>jt-utils</artifactId>
+            <version>1.4.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jaitools/jt-contour -->
         <dependency>
             <groupId>org.jaitools</groupId>
